uncovered bug where project status bar isn't updating with completed actions%

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -344,8 +344,8 @@ main {
 }
 
 .projectbox img {
-  height: 150px;
-  width: auto;
+  height: auto;
+  width: 200px;
 }
 
 .projects {
@@ -424,7 +424,6 @@ main {
   height: auto;
   width: 50px;
   border-radius: 50%;
-  box-shadow: 0px 5px 10px rgba(8, 8, 8, 0.33);
 }
 
 .smallimg2 {
@@ -470,25 +469,30 @@ main {
 }
 
 .actions {
-  width: 100vw;
+  width: 90vw;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   flex-wrap: wrap;
   padding-bottom: 50px;
+  margin: 0px 5vw;
 }
 
 .actions > div {
   flex-direction: column;
   align-items: flex-end;
+  width: 25vw;
 }
 
-.actions h3 {
+.actions div a  {
   text-align: left;
   margin-left: 25px;
+  color: #0C0C3E;
+  text-decoration: none;
 }
 
-.actions > div > img {
+
+.actions > div > a > img {
   width: 250px;
   height: auto;
   justify-self: center;
@@ -501,7 +505,7 @@ main {
 
 .meter2 {
   height: 30px;
-  width: 60%;
+  width: 50%;
 	position: relative;
   background: #f7f7f7;
   background-image: linear-gradient(to right,
@@ -509,6 +513,7 @@ main {
   rgb(238, 234, 234));
 	border-radius: 25px;
   box-shadow: 0px 3px 6px rgba(8, 8, 8, 0.33);
+  margin-left: 10px;
 }
 
 
@@ -527,7 +532,7 @@ main {
 
 .flexyrow {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 
@@ -536,7 +541,6 @@ main {
   height: auto;
   width: 15%;
   border-radius: 50%;
-  box-shadow: 0px 3px 6px rgba(8, 8, 8, 0.33);
 }
 
 .addaction {
